Changed padding on education-summary in order to stop overflow on mobile screen

--- a/style.css
+++ b/style.css
@@ -942,7 +942,7 @@ img {
   }
   .education-summary {
     width: 100%;
-    padding: 1em 1em 3em;
+    padding: 1em 0em 3em;
     height: 250px;
     background: #daffd9;
     grid-area: 1 / 1 / 1 / 1;
